<resources>
    <string name="app_name">Aplikasi Hello World</string>
    <string name="username">Masukkan Username</string>
    <string name="password">Masukkan Password</string>
    <string name="login_aplikasi">Login Aplikasi</string>
    <string name="login">Login</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="email">Email</string>
    <string name="passwords">Password</string>
</resources>