<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/et_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama"
        android:layout_below="@id/tv_title"
        android:layout_marginBottom="15dp" />

    <EditText
        android:id="@+id/et_nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_nama"
        android:hint="@string/nim"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_nim"
        android:hint="@string/email"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:hint="@string/passwords"
        android:inputType="textPassword"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="Register"
        android:padding="15dp"
        android:layout_below="@id/et_password"/>

</RelativeLayout>