<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_login"
                android:layout_gravity="center_horizontal"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:background="@drawable/bg_edittext">

                <ImageView
                    android:id="@+id/iv_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_kiddie"
                    android:layout_centerVertical="true"/>

                <View
                    android:id="@+id/line"
                    android:layout_width="1dp"
                    android:layout_height="24dp"
                    android:background="@color/teal_700"
                    android:layout_toEndOf="@id/iv_image"
                    android:layout_toRightOf="@id/iv_image"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/white"
                    android:layout_toEndOf="@id/line"
                    android:layout_toRightOf="@id/line"
                    android:layout_marginLeft="5dp" />

            </RelativeLayout>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_margin="10dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/bg_button"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/aclonica"
                android:layout_margin="10dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>